# rename-files-in-folder

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
tests/setup/: mod.rs
