[package]
name = "rename_files_in_folder"
version = "1.0.0"
authors = ["Antastic <antastic11a@gmail.com>"]
edition = "2021"
license = "GNU GPLv3" 

[[bin]]
name = "run_rename_files_in_folder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
regex = "1.9.1"

[profile.release]
# The tags below are for creating a smaller binary.
# When making this, I thought this would be this was going to be a small binary
# for my small needs. I was supprised when I saw this originally compiled to 6mb.
# While the binary now is about 1.4mb, I still prefer that over 6mb.
# https://github.com/johnthagen/min-sized-rust
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*